# data-agent-kit

./: .gitmodules  CHANGELOG.md  DEVELOPER.md  README.md  release-please-config.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: assign-issues.yml  assign-prs.yml
agent-analytics/: README.md
agent-evaluation/: README.md
mcp-servers/: README.md
ucp-analytics/: CHANGELOG.md  README.md  pyproject.toml  quickstart.py  sample_agent.py  smoke_test.py  ucp_analytics.py
ucp-analytics/dashboards/: queries.sql
ucp-analytics/docs/: bigquery-ucp-analytics.md  design_doc.md
ucp-analytics/examples/: README.md  _demo_utils.py  bq_adk_demo.py  bq_demo.py  cart_demo.py  e2e_demo.py  identity_payment_demo.py  order_lifecycle_demo.py  scenarios_demo.py  transport_demo.py
ucp-analytics/src/ucp_analytics/: __init__.py  _headers.py  _path_match.py  adk_plugin.py  client_hooks.py  events.py  middleware.py  parser.py  tracker.py  writer.py
ucp-analytics/tests/: test_adk_plugin.py  test_client_hooks.py  test_events.py  test_headers.py  test_middleware.py  test_parser.py  test_path_match.py  test_tracker.py  test_writer.py
