[project]
name = "ucp-analytics"
version = "0.3.0"
description = "Sample httpx → BigQuery commerce analytics for the Universal Commerce Protocol (UCP)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Haiyuan Cao", email = "haiyuan-eng-google@users.noreply.github.com" },
]
keywords = ["ucp", "commerce", "analytics", "bigquery", "httpx", "sample"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "google-cloud-bigquery>=3.20.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://ucp.dev"
Repository = "https://github.com/haiyuan-eng-google/data-agent-kit"
Specification = "https://ucp.dev/specification/overview"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Single-file module — no `src/` layout, no package directory.
include = ["ucp_analytics.py"]
